# data

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  clone_and_rename.sh  download_links.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto_merge.yml  cleanup_releases.yml  delete.yml  docs.yml  percentage_done.yml  r2.yml  run.yml  stats.yml  unique_python_files.yml
links/: dataset.txt  only_python_files.txt  repositories-with-packages.txt  repositories.json  repositories.txt  repositories_ssh.txt  unique_python_files.txt
sql/: _stats.prql  combine.prql  combine.sql  distinct_hash_path.py  only_python_files.sql  random.prql  random_unique.prql  stats.prql  stats.sql  unique_files.sql  unique_files_combined.sql  unique_python_files.prql  unique_python_files.sql  unique_python_files_combine.prql  unique_python_files_download.prql  unique_python_files_group_by.prql
src/: main.rs
src/pypi_data/: __main__.py  cli.py  combine_parquet.py  datasets.py
stats/: general_stats.json  github_secret_totals.json  language_stats.json  language_stats_totals.json  over_time.json  overall.json  random_sample.json  random_sample_python_only.json  repositories.json  skipped_files.json  top_binary_extensions.json  top_extensions.json  totals.json
