[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive"] }
datafusion = { version = "28.0.0", default-features = false, features = ["encoding__expressions", "zstd"] }
futures = "0.3.28"
glob = "0.3.1"
indicatif = { version = "0.17.6", features = ["tokio"] }
reqwest = { version = "0.11.19", features = ["stream"] }
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
snmalloc-rs = "0.3"

[profile.optimized]
inherits = "release"
lto = true
codegen-units = 1