[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive"] }
datafusion = { version = "41.0.0"}
futures = "0.3.28"
glob = "0.3.1"
indicatif = { version = "0.17.6", features = ["tokio"] }
reqwest = { version = "0.12.7", features = ["stream"] }
tokio = { version = "^1.0", features = ["rt-multi-thread", "full"] }
snmalloc-rs = "0.3"

[profile.optimized]
inherits = "release"
#lto = true
#codegen-units = 1
