[project]
name = "pypi-data"
version = "0.1.0"
description = ""
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "more-itertools>=10.4.0",
    "prql-python>=0.11.2",
    "psutil>=6.0.0",
    "pygithub",
    "requests",
    "tqdm",
    "typer[all]",
]

[project.scripts]
pypi-data = "pypi_data.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"